--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Zen Note Taker</title>
 </head>
 <body>
+    <header><h1>Zen Note....</h1></header>
+    <main id="notes-list">
+        <section class="card" id="new-note-card">
+            <button id="add-new">+</button>
+        </section>
+    </main>
     
-
+    <footer>
+        <p>
+            Made By <a href="http://github.com/prantikseal" target="_blank">Prantik</a>, <a href="http://" target="_blank">Akash</a>, <a href="http://" target="_blank">Radhika</a>, <a href="http://" target="_blank">Vinit</a>
+        </p>
+    </footer>
     <script defer src="./app/app.js"></script>
 </body>
 </html>
+
