as in working condition

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <footer>
         <p>
-            Made By <a href="http://github.com/prantikseal" target="_blank">Prantik</a>, <a href="http://" target="_blank">Akash</a>, <a href="http://" target="_blank">Radhika</a>, <a href="http://" target="_blank">Vinit</a>
+            Made with ❤️ By <a href="http://github.com/prantikseal" target="_blank">Prantik</a>, <a href="http://" target="_blank">Akash</a>, <a href="http://" target="_blank">Radhika</a>, <a href="http://" target="_blank">Vinit</a>
         </p>
     </footer>
     <script defer src="./app/app.js"></script>
